# mlops-prop-mgmt

./: .cursorrules  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Makefile  README.md  check_env.py  commit_message.txt  instructions.md  pyproject.toml  run.sh  start.sh  z_next_step_checklist.md
.github/scripts/: add_type_hints.py  find_complex_functions.py  fix_docstrings.py  fix_fstrings.py
.github/workflows/: ci.yml
assets/: architecture.md
backend/: .env.example  .gitignore  DEPLOYMENT.md  README.md  __init__.py  apigw_root_test_event.json  apigw_test_event.json  build_lambda_layer.sh  deploy-lambda.sh  package-lambda.sh  package_mini_test.sh  package_test.sh  package_ultra_simple.sh  package_with_pip.sh  pyproject.toml  pyproject.toml.bak  requirements.dev.txt  requirements.lock.txt  requirements.txt  ultra_simple_lambda.py  z_next_step_checklist.md
backend/app/: __init__.py  config.py  main.py
backend/app/auth/: __init__.py  cognito.py  jwt.py  oauth.py
backend/app/db/: report.py  unit.py
backend/app/models/: lease.py
backend/app/routers/: auth.py  lease.py  unit.py
backend/app/templates/: report.html
backend/lambda_pip/: aws_lambda_handler.py
backend/lambda_pkg/: aws_lambda_handler.py
backend/lambda_pkg/api/: __init__.py  config.py
backend/lambda_pkg/api/auth/: oauth.py
backend/lambda_pkg/api/db/: lease.py
backend/lambda_pkg/api/docs/: api_documentation.md  index.md
backend/lambda_pkg/api/models/: payment.py  report.py
backend/lambda_pkg/api/routers/: payment.py  report_viewer.py
backend/lambda_pkg/api/static/: asset-manifest.json  index.html
backend/lambda_pkg/api/static/css/: test.css
backend/lambda_pkg/api/static/js/: test.js
backend/lambda_pkg/api/static/static/: config.dev.json  config.json
backend/lambda_pkg/api/static/static/css/: main.c39ae660.css  main.c39ae660.css.map
backend/lambda_pkg/api/static/static/js/: main.0e57cf3e.js  main.0e57cf3e.js.map  main.6c28c180.js  main.6c28c180.js.map  main.717a0331.js  main.717a0331.js.map  main.9ed3ec72.js  main.9ed3ec72.js.map  main.c99080cb.js  main.c99080cb.js.map
backend/lambda_pkg/api/templates/: ui_ascii_concept.md
backend/mini_test/api/: main.py
backend/scripts/: check_cognito.py  deploy-lambda-fixed-arm64.sh  deploy-lambda-fixed.sh  package-lambda-docker-fixed-arm64.sh  package-lambda-docker-fixed.sh  package-lambda-docker.sh  package-lambda.sh  test_auth_flow.py  test_static_serving.py  update-lambda.sh  validate-static-serving.py
backend/src/: __init__.py  aws_lambda_handler.py
backend/src/api/: __init__.py  config.py  main.py  requirements.txt  run.py
backend/src/api/auth/: __init__.py  cognito.py  jwt.py  middleware.py
backend/src/api/db/: payment.py  property.py
backend/src/api/docs/: README.md  implementation_guide.md
backend/src/api/docs/assets/: architecture.md
backend/src/api/models/: property.py  unit.py
backend/src/api/routers/: auth.py  report.py
backend/src/api/templates/: dashboard.html  login.html  report.html
backend/test_lambda/: aws_lambda_handler.py
backend/test_lambda/api/: main.py
backend/test_lambda/fastapi-0.115.11.dist-info/: RECORD
docs/: installation_testing.md
docs/aws/: cognito-implementation-checklist.md  cognito-implementation-next-steps.md
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend.bak/: .env.example  .gitignore
frontend.bak/public/: index.html
frontend.bak/public/static/: config.json
frontend.bak/src/: LoginPage.tsx  MainApp.tsx  config.ts  index.tsx
frontend.bak/src/auth/: LoginButton.tsx  cognitoAuth.ts
frontend/public/: index.html
frontend/src/: App.tsx  AppComponent.tsx  CallbackPage.tsx  LoginPage.tsx  MainApp.tsx  config.ts  index.css  index.tsx
frontend/src/auth/: LoginButton.tsx  LogoutButton.tsx  auth-components.tsx  auth-utils.ts  cognitoAuth.ts
frontend/src/pages/: Login.tsx  ProtectedPage.tsx
mlops-prop-mgmt/: requirements.txt
mlops-prop-mgmt/app/: main.py
scripts/: lambda-deploy.sh  validate_lambda.py
scripts/auth/: check_cognito.py
src/: README.md
src/mlopspropmgmt/: __init__.py  config.py  main.py  run.py
src/mlopspropmgmt/data/: sample_data.py
src/mlopspropmgmt/db/: lease.py  payment.py  property.py  report.py  tenant.py  unit.py
src/mlopspropmgmt/docs/: implementation_guide.md  index.md
src/mlopspropmgmt/docs/assets/: architecture.md
src/mlopspropmgmt/models/: lease.py  payment.py  property.py  report.py  tenant.py  unit.py
src/mlopspropmgmt/routers/: lease.py  payment.py  property.py  report.py  report_viewer.py  tenant.py  unit.py
src/mlopspropmgmt/templates/: report.html
src/tests/: conftest.py  test_health.py  test_lease.py  test_payment.py  test_property.py  test_report.py  test_tenant.py  test_unit.py
tests/: __init__.py  test_aws_cognito.py  test_installation.sh
tests/unit_tests/: __init__.py  test_documentation.py  test_report_service.py
