[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "phitoduck", email = "eric.riddoch@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.5.0",
    "fastapi>=0.115.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = ["black>=24.0.0", "isort>=5.12.0", "pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 119
exclude = '''
/(
    venv
)/
'''

[tool.flake8]
exclude = ["venv"]
